@@ -8,18 +8,18 @@ import org.scalatest.mockito.MockitoSugar
 import stryker4s.config.Config
 import stryker4s.model.{Killed, Mutant, MutantRunResults}
 import stryker4s.mutants.Mutator
-import stryker4s.mutants.applymutants.{MatchBuilder, StatementTransformer}
-import stryker4s.mutants.findmutants.{MutantFinder, MutantMatcher}
+import stryker4s.mutants.applymutants.{ActiveMutationContext, MatchBuilder, StatementTransformer}
+import stryker4s.mutants.findmutants.{FileCollector, MutantFinder, MutantMatcher}
 import stryker4s.run.process.{Command, ProcessMutantRunner}
 import stryker4s.run.report.{ConsoleReporter, HtmlReporter, Reporter}
 import stryker4s.run.threshold.SuccessStatus
-import stryker4s.scalatest.FileUtil
-import stryker4s.testutil.stubs.{TestProcessRunner, TestReporter, TestSourceCollector}
+import stryker4s.scalatest.{FileUtil, LogMatchers}
 import stryker4s.testutil.Stryker4sSuite
+import stryker4s.testutil.stubs._
 
 import scala.util.Success
 
-class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatchersSugar {
+class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatchersSugar with LogMatchers {
 
   describe("run") {
     val file = FileUtil.getResource("scalaFiles/simpleFile.scala")
@@ -29,12 +29,15 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
 
     it("should call mutate files and report the results") {
       implicit val conf: Config = Config(baseDir = FileUtil.getResource("scalaFiles"))
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner)
+      val testMutantRunner =
+        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, new FileCollector(testProcessRunner))
       val testReporter = new TestReporter
 
       val sut = new Stryker4s(
         testSourceCollector,
-        new Mutator(new MutantFinder(new MutantMatcher), new StatementTransformer, new MatchBuilder),
+        new Mutator(new MutantFinder(new MutantMatcher),
+                    new StatementTransformer,
+                    new MatchBuilder(ActiveMutationContext.sysProps)),
         testMutantRunner,
         testReporter
       )
@@ -59,13 +62,13 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
       val htmlReporterMock: HtmlReporter = mock[HtmlReporter]
 
       implicit val conf: Config = Config(reporters = List(consoleReporterMock, htmlReporterMock))
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner)
+      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
 
       val sut = new Stryker4s(
         testSourceCollector,
         new Mutator(new MutantFinder(new MutantMatcher),
                     new StatementTransformer,
-                    new MatchBuilder),
+                    new MatchBuilder(ActiveMutationContext.sysProps)),
         testMutantRunner,
         new Reporter
       )
@@ -74,6 +77,60 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
 
       verify(consoleReporterMock).report(any[MutantRunResults])(any[Config])
       verify(htmlReporterMock).report(any[MutantRunResults])(any[Config])
+    }
+
+    it("should log a warning when JVM max memory is too low") {
+      implicit val conf: Config = Config()
+      val testSourceCollector = new TestSourceCollector(Seq())
+      val testProcessRunner = TestProcessRunner()
+      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
+      val testReporter = new TestReporter
+
+      val sut: Stryker4s =
+        new Stryker4s(
+          testSourceCollector,
+          new Mutator(new MutantFinder(new MutantMatcher),
+                      new StatementTransformer,
+                      new MatchBuilder(ActiveMutationContext.sysProps)),
+          testMutantRunner,
+          testReporter
+        ) {
+
+          override def jvmMemory2GBOrHigher: Boolean = false
+        }
+
+      sut.run()
+
+      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." shouldBe loggedAsWarning
+      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " shouldBe loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." shouldBe loggedAsWarning
+    }
+
+    it("should not log a warning when JVM max memory is high enough") {
+      implicit val conf: Config = Config()
+      val testSourceCollector = new TestSourceCollector(Seq())
+      val testProcessRunner = TestProcessRunner()
+      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
+      val testReporter = new TestReporter
+
+      val sut: Stryker4s =
+        new Stryker4s(
+          testSourceCollector,
+          new Mutator(new MutantFinder(new MutantMatcher),
+                      new StatementTransformer,
+                      new MatchBuilder(ActiveMutationContext.sysProps)),
+          testMutantRunner,
+          testReporter
+        ) {
+
+          override def jvmMemory2GBOrHigher: Boolean = true
+        }
+
+      sut.run()
+
+      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." should not be loggedAsWarning
+      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " should not be loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." should not be loggedAsWarning
     }
   }
 }
